--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
               <input class="form-control" type="search" placeholder="Search" aria-label="Search">
             </li>
             <li class="nav-item me-3 border p-2">
-              <i class="fa-solid fa-cart-shopping fa-xs"></i>
+              <i class="fa-solid fa-cart-shopping fa-fade fa-xs"></i>
               <a>&nbsp;&nbsp;Cart</a>
             </li>
             <li class="nav-item  border me-3 p-2">
-              <i class="fa-solid fa-heart fa-sm mt-2"></i>
+              <i class="fa-solid fa-heart fa-fade" style="color: black;"></i>
             </li>
             <li class="nav-item  border ms-2 p-2 me-3">
-              <i class="fa-solid fa-user fa-sm"></i>
+              <a href="index1.html"><i class="fa-solid fa-user fa-sm fa-fade"></i>
+              </a>
             </li>
               </ul>
         </div>
@@ -48,25 +49,28 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto ms-3 mb-0 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="#Home-page">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Shop</a>
+            <a class="nav-link" href="#shop">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Product</a>
+            <a class="nav-link" href="#product">Product</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Pages</a>
+            <a class="nav-link " href="#Contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">About</a>
+            <a class="nav-link " href="#message-box">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="index1.html">Sing-Up</a>
           </li>
         </ul>
 
         <ul class="navbar-nav me-2 mb-0 mb-lg-0">
           <li class="nav-item text">
-            <a class="nav-link" href="#">contact(+91 8433525372)</a>
+            <a class="nav-link" href="https://chat.whatsapp.com/Gji70DitHuvLqHuCpRk2vI">contact(+91 8433525372)</a>
           </li>
         </ul>
 
@@ -81,20 +85,21 @@
       <div class="col-lg-6 p-5 ">
         <h6 class="homepg-header">WELCOME TO CHAIRY</h6>
         <h2 class="info"><b>Best Furniture <br> Colllection For Your <br> Interior</b></h2>
-        <button class="btn btn-info text-light "  onclick="window.location.href='';">Shop Now
+        <button class="btn btn-info text-light "  onclick="window.location.href='https://www.etsy.com/in-en/market/muslim_chair';">Shop Now
           <i class="fa-solid fa-arrow-right fa-lg ps-2"></i></button>
       </div>
       <div class="col-lg-6  mt-5">
         <img src="ecom image/banner.png" alt="home-chair" class="Chair img-fluid">
+        <img src="ecom image/discount-img.png" alt="discount-img" class="img-fluid discount-img rounded-pill">
       </div>
 </div>
 </section>
 
 <section id="features">
-  <div class="container bg-light">
-    <h3 class="p-3 ms-5 mb-0">Features Product</h3>
+  <div class="container bg-light row-padding">
+    <h3 class="p-3 ms-5 mb-0 feature-txt">Features Product</h3>
     <div class="row p-4">
-      <div class="col-lg-3">
+      <div class="col-lg-3 ">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair1.jpg" alt="chair1"  class="card-logo mb-2 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">Library Stool Chair</h6>
@@ -105,7 +110,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-3 card-margintop">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair2.jpg" alt="chair2"  class="card-logo mb-2 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">wooden stool chair</h6>
@@ -116,7 +121,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-3 card-margintop">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair3.jpg" alt="chair3"  class="card-logo mb-2 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">fancy stool chair</h6>
@@ -127,7 +132,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-3 card-margintop">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair4.jpg" alt="chair4"  class="card-logo mb-2 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">library stool chair</h6>
@@ -145,7 +150,7 @@
 </section>
 
 <section id="product">
-  <div class="container bg-light">
+  <div class="container bg-light row-padding">
     <h3 class="p-4 text-center">Our-Product</h3>
     <nav class="navbar navbar-expand-lg ">
       <div class="container-fluid">
@@ -182,7 +187,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-3 card-margintop">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair8.jpg" alt="chair2"  class="card-logo mb-2 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">wooden stool chair</h6>
@@ -193,7 +198,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-3 card-margintop">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair-n3.jpg" alt="chair3"  class="card-logo mb-2 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">fancy stool chair</h6>
@@ -204,7 +209,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-3 card-margintop">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair-n5.jpg" alt="chair4"  class="card-logo mb-2 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">library stool chair</h6>
@@ -239,7 +244,7 @@
 
       <div class="col-lg-3">
         <div class="cardbody rounded bg-white">
-            <img src="ecom image/chair3.jpg" alt="chair3"  class="card-logo mt-5 rounded mx-auto d-block img-fluid">
+            <img src="ecom image/chair3.jpg" alt="chair3"  class="card-logo mt-5  rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">fancy stool chair</h6>
            <div class="d-flex">
             <p class="ms-4">$60</p>
@@ -248,7 +253,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-3 ">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair5.jpg" alt="chair4"  class="card-logo mt-5 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">library stool chair</h6>
@@ -263,9 +268,9 @@
 
 <section id="message-box">
   <div class="container bg-light p-5">
-    <h3 class=" ms-5  mb-4 ">What Client Say about-us</h3>
+    <h3 class=" ms-5  mb-4 msg-head">What Client Say about-us</h3>
   <div class="row justify-content-center">
-      <div class="col-lg-4">
+      <div class="col-lg-4 msg-box ">
         <div class="card">
           <div class="card-body p-2  msg-txt">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus vel sit accusantium enim porro 
@@ -282,7 +287,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4">
+      <div class="col-lg-4 msg-box">
         <div class="card">
           <div class="card-body p-2 msg-txt">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus vel sit accusantium enim porro 
@@ -304,7 +309,7 @@
   </div>
 </section>
 
-<section id="features">
+<section id="shop">
   <div class="container bg-light">
     <h3 class="p-3 ms-5 mb-0">Features Product</h3>
     <div class="row p-4">
@@ -319,7 +324,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-3 card-margintop">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair2.jpg" alt="chair2"  class="card-logo mb-2 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">wooden stool chair</h6>
@@ -330,7 +335,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-3 card-margintop">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair3.jpg" alt="chair3"  class="card-logo mb-2 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">fancy stool chair</h6>
@@ -341,7 +346,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-lg-3 card-margintop">
         <div class="cardbody rounded bg-white">
             <img src="ecom image/chair4.jpg" alt="chair4"  class="card-logo mb-2 rounded mx-auto d-block img-fluid">
             <h6 class="card-head  ms-4">library stool chair</h6>
@@ -358,44 +363,53 @@
   </div>
 </section>
 
-<section id="contact">
-  <div class="container">
-    <div class="row">
-      <div class="col-4">
-        <h5 class="ms-5 mt-3">CHAIRY</h5>
-        <p class="text-start contac-para ms-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora autem natus modi eligendi accusantium 
-          asperiores ex consectetur corporis dolorem mollitia! Fugiat minus tempore enim ex nisi dolore, eveniet odio hic.</p>
-          <div class="ms-5">
-            <i class="fa-brands fa-facebook fa-sm "></i>
-            <i class="fa-brands fa-twitter fa-sm ms-2"></i>
-            <i class="fa-brands fa-youtube fa-sm ms-2"></i>
-            <i class="fa-brands fa-instagram fa-sm ms-2"></i>
-            <i class="fa-brands fa-linkedin fa-sm ms-2"></i>
-          </div>
-      </div>
-
-      <div class="col-2">
-        <h6 class="ms-5 mt-3">CATEGORY</h6>
-        <p class="text-start contac-para ms-5 mt-3">Sofa <br> amchar <br> wing chair <br> wooden chair <br>Desk Chair <br>artificia chair <br>pack bench</p>
-      </div>
-
-      <div class="col-2">
-        <h6 class="ms-5 mt-3">SUPPORT</h6>
-        <p class="text-start contac-para ms-5 mt-3">Help & Support<br>terms and condition<br>privacy policy<br> Help</p>
-      </div>
-
-      <div class="col-2">
-        <h6 class="ms-5 mt-3">NEWS LETTER</h6>
-        <div class="d-flex">
-          <input type="email" placeholder="Your Email" class="ms-5">
-          <button class="btn btn-primary text-light ms-2 ">Subscribe</button>
+<section id="Contact">
+  <div class="container bg-white">
+    <div class="row p-5">
+      <div class="col-lg-4">
+        <div class="cardbody rounded bg-white">
+            <h6 class="card-head">CHAIRY</h6>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda laudantium veritatis
+               nostrum accusamus reiciendis sint obcaecati corporis, quae odit.</p>
+               <div class="mb-5">
+                <i class="fa-brands fa-facebook fa-sm "></i>
+                <i class="fa-brands fa-twitter fa-sm ms-2"></i>
+                <i class="fa-brands fa-youtube fa-sm ms-2"></i>
+                <i class="fa-brands fa-instagram fa-sm ms-2"></i>
+                <i class="fa-brands fa-linkedin fa-sm ms-2"></i>
+              </div>
         </div>
-        <p class=" ms-5 contac-para-last">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt porro eum enim alias.</p>
-
       </div>
-    </div>
+
+      <div class="col-lg-2">
+        <div class="cardbody rounded bg-white">
+            <h6 class="card-head">CATEGORY</h6>
+            <p class="mb-5">Sofa <br> amchar <br> wing chair <br> wooden chair <br>Desk Chair <br>artificia chair <br>pack bench</p>
+        </div>
+      </div>
+
+      <div class="col-lg-2">
+        <div class="cardbody rounded bg-white">
+            <h6 class="card-head">SUPPORT</h6>
+            <p class="mb-5">Help & Support<br>terms and condition<br>privacy policy<br> Help</p>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="cardbody rounded bg-white">
+            <h6 class="card-head">NEWS LETTER</h6>
+            <div class="d-flex">
+              <input type="email" placeholder="Your Email">
+              <button class="btn btn-primary text-light ms-2 ">Subscribe</button>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda laudantium veritatis
+              , quae odit.</p>contact(+91 8433525372)
+        </div>
+      </div>
   </div>
 </section>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 </body>
