--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
   <div class="container bg-light p-5">
     <h3 class=" ms-5  mb-4 msg-head">What Client Say about-us</h3>
   <div class="row justify-content-center">
-      <div class="col-lg-4 msg-box ">
+      <div class="col-lg-4">
         <div class="card">
           <div class="card-body p-2  msg-txt">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus vel sit accusantium enim porro 
@@ -278,10 +278,10 @@
               quos cum voluptate?</p>                  
           </div>
           <div class="d-flex">
-            <img src="ecom image/test-img4.png" alt="" class="msg-img h-50  ms-4">
+            <img src="ecom image/Me.png" alt="my-pic" class="msg-img  ms-4 mb-3">
              <div class="mt-4 ms-2">
-              <h5>willamson/</h5>
-              <p >Fashion-Designer</p>
+              <h5>Ahsu/</h5>
+              <p>Fashion-Designer</p>
              </div>
           </div>
         </div>
@@ -295,10 +295,10 @@
                   quos cum voluptate?</p> 
           </div>
           <div class="d-flex">
-            <img src="ecom image/test-img4.png" alt="" class="msg-img h-50 ms-4">
+            <img src="ecom image/Me.png" alt="my-pic" class="msg-img  ms-4 mb-3">
              <div class="mt-4 ms-2">
-              <h5>willamson/</h5>
-              <p >Fashion-Designer</p>
+              <h5>Ahsu/</h5>
+              <p>Fashion-Designer</p>
              </div>
           </div>
   </div>
